fix(homepage): place graph behind banner

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -10,6 +10,12 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  height: 40vh;
+}
+
+.heroBanner > div {
+  position: absolute;
+  left: 00%;
 }
 
 @media screen and (max-width: 966px) {
@@ -22,6 +28,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+}
+
+.buttonText {
+  color: white;
 }
 
 .features {
@@ -29,6 +40,7 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  height: 40vh;
 }
 
 .featureImage {
@@ -36,9 +48,24 @@
   width: 200px;
 }
 
+.titleContainer {
+  position: absolute;
+  right: 0%;
+  z-index: 3;
+}
+
+.shadeBox {
+  position: relative;
+  background-color: rgba(126, 126, 126, 0.7);
+  z-index: 2;
+  padding: 1rem;
+  width: 30%;
+  margin: 0 auto;
+}
+
 .bannerBox {
   width: 100%;
-  overflow: visible;
+  z-index: 1;
 }
 
 .bannerContainer {
